[package]
name = "stabilize"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-test = "0.2"
tokio-util = { version = "0.3.1", features = ["full"] }
futures = "0.3.5"
http = "0.2.1"
httparse = "1.3.4"
bytes = "0.5.5"
quinn = "0.6.1"
tracing = "0.1.10"
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
structopt = "0.3.0"
anyhow = "1.0.22"

