[package]
name = "stabilize"
version = "0.1.0"
authors = ["Freddie Brown <fred@noser.net>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/test_components/client.rs"

[[bin]]
name = "server"
path = "src/test_components/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-test = "0.2.1"
tokio-util = { version = "0.3.1", features = ["full"] }
futures = "0.3.5"
http = "0.2.1"
httparse = "1.3.4"
bytes = "0.5.5"
quinn = "0.6.1"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
webpki = "0.21"
anyhow = "1.0"
tracing-subscriber = "0.2"
structopt = "0.3.0"